# highlight-reel

./: .gcloudignore  .gitignore  README.md  cloudbuild.yaml
backend/: README.md  pyproject.toml  requirements.txt
backend/analyzer/: main.py  requirements.txt
backend/api/: main.py  requirements.txt  test_genai.py  test_models.py  test_signer.py
backend/audio_gen/: main.py  requirements.txt
backend/initiator/: main.py  requirements.txt
backend/producer/: main.py  requirements.txt
backend/publisher/: main.py  requirements.txt
backend/renderer/: Dockerfile  main.py
backend/tests/: test_api.py  test_producer.py
docs/: project_plan.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: AdminPage.jsx  App.jsx  Dashboard.jsx  JobForm.jsx  index.css  main.jsx  tracing.js
terraform/gcp/: README.md  backend.tf  bigquery.tf  dns.tf  functions.tf  iam.tf  iap.tf  main.tf  outputs.tf  pubsub.tf  registry.tf  run.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
